# SEM3-PW-COLLATZ

./: CMakeLists.txt  Makefile  collatz.hpp  contest.hpp  generators.hpp  main  main.cpp  new_process  new_process.cpp  sharedresults.hpp  teams.cpp  teams.hpp
